--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Links Page</title>
+    <title>Tarkov Stuff</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,9 +37,9 @@
     </style>
 </head>
 <body>
-    <h1>Simple Links Page</h1>
+    <h1>Tarkov Stuff</h1>
     <ul>
-        <li><a href="https://www.example.com" title="Example Site">Example Site</a></li>
+        <li><a href="https://tarkov-market.com" title="Price Check">Price Check</a></li>
         <li><a href="https://www.google.com" title="Google">Google</a></li>
         <li><a href="https://www.wikipedia.org" title="Wikipedia">Wikipedia</a></li>
         <li><a href="https://www.github.com" title="GitHub">GitHub</a></li>
