--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
 <body>
     <h1>Tarkov Stuff</h1>
     <ul>
-        <li><a href="https://tarkov.dev" title="Tarkov Dev">TarkovDev</a></li>
+        <li><a href="https://tarkov.dev" title="Tarkov Dev">Tarkov Dev</a></li>
         <li><a href="https://www.eft-ammo.com" title="Ammo">Ammo</a></li>
-        <li><a href="https://mapgenie.io/tarkov" title="Map Genie">MapGenie</a></li>
-        <li><a href="https://tarkovtracker.io" title="Tarkov Tracker">TarkovTracker</a></li>
-        <li><a href="https://www.reddit.com/r/gaming/comments/11qms25/escape_from_tarkov_scope_comparison_all_sight/#lightbox" title="Sight Comparison">SightComparison</a></li>
+        <li><a href="https://mapgenie.io/tarkov" title="Map Genie">Map Genie</a></li>
+        <li><a href="https://tarkovtracker.io" title="Tarkov Tracker">Tarkov Tracker</a></li>
+        <li><a href="https://www.reddit.com/r/gaming/comments/11qms25/escape_from_tarkov_scope_comparison_all_sight/#lightbox" title="Sight Comparison">Sight Comparison</a></li>
         <li><a href="https://escapefromtarkov.fandom.com/wiki/Character_skills" title="Skills">Skills</a></li>
-        <li><a href="https://docs.google.com/spreadsheets/d/1AP98KNE7p30MqOe9O_4lpxPnIwlu1fmO5rVKTS5sPcg/edit?usp=sharing" title="Ears and Gunsmith">EarsAndGunsmith</a></li>
+        <li><a href="https://docs.google.com/spreadsheets/d/1AP98KNE7p30MqOe9O_4lpxPnIwlu1fmO5rVKTS5sPcg/edit?usp=sharing" title="Ears and Gunsmith">Ears and Gunsmith</a></li>
     </ul>
 </body>
 </html>
