--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarkov Stuff</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
+            background-color: #000000; /* Background color */
+            color: #5B34BD; /* Text color */
             margin: 0;
             padding: 0;
             display: flex;
@@ -29,7 +30,7 @@
         }
         a {
             text-decoration: none;
-            color: #007BFF;
+            color: #C51414; /* Link color */
         }
         a:hover {
             text-decoration: underline;
